--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.frm linguist-language=vb6
 *.bas linguist-language=vb6
-*.bas linguist-detectable=true
+*.vbp linguist-language=vb6
+*.vbp linguist-detectable=true
